--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,6 +1,13 @@
-actions: []
+actions:
+    - name: findUsers
+      definition:
+        kind: synchronous
+        handler: http://localhost:3000/findUsers
 custom_types:
-  enums: []
-  input_objects: []
-  objects: []
-  scalars: []
+    enums: []
+    input_objects:
+        - name: SearchInput
+    objects:
+        - name: Location
+        - name: SearchOutput
+    scalars: []
