--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -2,12 +2,11 @@ actions:
   - name: findUsers
     definition:
       kind: ""
-      handler: http://localhost:3000/findUsers
+      handler: http://server:3000/findUsers
 custom_types:
   enums: []
   input_objects:
     - name: SearchInput
   objects:
-    - name: Location
     - name: SearchOutput
   scalars: []
