added center lat lng env

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ HASURA_HOST_PORT=8000
 SERVER_HOST_PORT=3000
 JWT_SECRET=GZH2K4M5N7Q8R9SBUCVDXFYGZJ3K4M6P7Q8SATBUDWEXFZH2J3M5N6P7R9
 PG_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres
+
+# Location
+CENTER_LATITUDE=3.140852
+CENTER_LONGITUDE=101.693206
